--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+  	<link type="image/x-icon" rel="icon" href="/favicon.ico" />
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1>¡Binevenido/a a <%= title %>!</h1>
+    <p>¡El portal en el que podrás demostrar tus conocimientos!</p>
+	<p>Pon a prueba a tus amigos creando tus propias preguntas</p>
   </body>
 </html>
