--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
   <body>
     <h1>¡Binevenido/a a <%= title %>!</h1>
     <p>¡El portal en el que podrás demostrar tus conocimientos!</p>
-	<p>Pon a prueba a tus amigos creando tus propias preguntas</p>
+    <p>Pon a prueba a tus amigos creando tus propias preguntas</p>
+    <p><a href="/quizes/question">Comenzar</a></p>
   </body>
 </html>
