--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-  	<link type="image/x-icon" rel="icon" href="/favicon.ico" />
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1>¡Binevenido/a a <%= title %>!</h1>
+
+    <h3>¡Binevenido/a a <%= title %>!</h3>
     <p>¡El portal en el que podrás demostrar tus conocimientos!</p>
     <p>Pon a prueba a tus amigos creando tus propias preguntas</p>
-    <p><a href="/quizes/question">Comenzar</a></p>
-  </body>
-</html>
+    <p><a href="/quizes/question">¡Comenzar!</a></p>
