--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,7 +28,8 @@
         <div><%- body %></div>
       </section>
       <footer class="main" id="f1">
-        <a href="http://es.wikipedia.org/wiki/Quiz"><br>¿Qué es un <em>Quiz</em>?<br></a>
+        <a href="http://es.wikipedia.org/wiki/Quiz">¿Qué es un <em>Quiz</em>?</a>
+        <a href="https://github.com/IsmaelFdez/QUIZ">Ver proyecto en Github</a>
       </footer>
     </div>
   </body>
