--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,8 +21,17 @@
         <h2>Quiz: <span>el juego de las preguntas</span></h2>
       </header>
       <nav class="main" id="n1" role="navigation">
-        <span><a href="/">Inicio</a></span>
-        <span><a href="/quizes/question">Preguntas</a></span>
+        <ul>
+          <li>
+            <a href="/">Inicio</a>
+          </li>
+          <li>
+            <a href="/quizes/question">Preguntas</a>
+          </li>
+          <li>
+            <a href="/author">Acerca de</a>
+          </li>
+        </ul>
       </nav>
       <section class="main" id="s1">
         <div><%- body %></div>
