--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
 <h3>¡Binevenido/a a <%= title %>!</h3>
 <p>¡El portal en el que podrás demostrar tus conocimientos!</p>
 <p>Pon a prueba a tus amigos creando tus propias preguntas</p>
-<p><a href="/quizes/question">¡Comenzar!</a></p>
+<p><a href="/quizes">¡Comenzar!</a></p>
