--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,7 +26,7 @@
             <a href="/">Inicio</a>
           </li>
           <li>
-            <a href="/quizes/question">Preguntas</a>
+            <a href="/quizes">Preguntas</a>
           </li>
           <li>
             <a href="/author">Acerca de</a>
