--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,6 +29,10 @@ footer {
 nav span {
 	margin: 0px 10px 0px 0px;
 }
+#ErrorMsgs {
+	color: #f61;
+	font-size: smaller;
+}
 .searchBox {
 	width: auto;
 	height: auto;
