--- a/public/stylesheets/smartphone.css
+++ b/public/stylesheets/smartphone.css
@@ -2,7 +2,7 @@ body {
 	background: #333;
 }
 #page-wrap:after {
-	content: "Smartphone Layout";
+	content: "Smartphone Layout. Página en construcción. Gracias por su paciencia.";
 }
 h2 span, section h3 {
 	display: none;
