--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,8 +2,17 @@
 	margin: 0;
 	padding: 0;
 }
+ul {
+	list-style: none;
+}
+ul li {
+	padding-top: 10px;
+}
 body {
 	font: 16px Georgia, serif;
+}
+#s1{
+	position: relative;
 }
 #page-wrap {
 	margin: 2% auto;
@@ -17,6 +26,13 @@ body {
 }
 section > div {
 	padding: 20px;
+}
+input {
+	padding: 6px;
+}
+#preg, #resp, .cancelbutton, select {
+	padding: 6px;
+	margin:10px;
 }
 header, nav, section {
 	background: #eee;
@@ -34,8 +50,88 @@ nav span {
 	font-size: smaller;
 }
 .searchBox {
+	position: fixed;
 	width: auto;
 	height: auto;
-	left: 100%;
-	top: 0;
+	right: 2.5%;
+}
+.searchBox input:nth-child(2) {
+	position: absolute;
+	right: 1%;
+	top: 5%;
+	border: none;
+	background-color: transparent;
+}
+#questionsTable{
+	position: relative;
+	top: 10%;
+	text-align: left;
+	width: 50%;
+}
+#questionsTable td {
+	padding-bottom: 4%;
+}
+#questionsTable button {
+	padding: 2%;
+	margin-left: 10%
+}
+#newButton {
+	position: absolute;
+	left: 22%;
+}
+#gramad {
+	height: auto;
+	width: 95%;
+	position: absolute;
+	bottom: 5%;
+	left: 2.5%;
+	font-size: smaller;
+	text-align: justify;
+}
+#quest {
+	position: absolute;
+	top: 5%;
+	left: 2.5%;
+	text-align: left;
+}
+#quest input {
+	margin-top: 3%;
+}
+.idast, .idbio, .idgeo, .idquim, .idotros {
+	width: 0;
+	height: 0;
+	margin-right: 10px;
+	border-bottom: 20px solid #3F51B5;
+	border-left: 10px solid transparent;
+	border-right: 10px solid transparent;
+	border-radius: 50%;
+}
+.idbio {
+	border-bottom: 20px solid #4CAF50;
+}
+.idgeo {
+	border-bottom: 20px solid #FF9800;
+}
+.idquim {
+	border-bottom: 20px solid #E91E63;
+}
+.idotros {
+	border-bottom: 20px solid #607D8B;
+}
+#leyenda {
+	position: fixed;
+	height: auto;
+	width: auto;
+	top: 200px;
+	right: 6.3%;
+}
+#leyenda div {
+	width: 0;
+	height: 0;
+	position: relative;
+	left: 38%;
+}
+#leyenda span {
+	display: block;
+	margin: 5% 0 10% 0;
 }
