--- a/public/stylesheets/wide.css
+++ b/public/stylesheets/wide.css
@@ -2,20 +2,20 @@ body {
 	background: #999;
 }
 #page-wrap:after {
-	content: "Wide Layout";
+	content: "Wide Layout. Página en construcción. Gracias por su paciencia.";
 }
 nav {
 	float: left;
 	width: 15%;
-	height: 300px;
+	height: 500px;
 }
 nav span {
 	margin: 0px 100px 0px 0px;
 }
 section {
 	float: right;
-	width: 80%;
-	height: 300px;
+	width: 80.3%;
+	height: 500px;
 }
 footer {
 	clear: both;
