--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -45,7 +45,7 @@
             <% } %>
           </span>
         <% } %>
-        <div><%- body %></div>
+        <%- body %>
       </section>
 
       <footer class="main" id="f1">
