--- a/views/quizes/edit.ejs
+++ b/views/quizes/edit.ejs
@@ -2,3 +2,13 @@ Edite la pregunta <p>
 <form method="post" action="/quizes/<%= quiz.id %>?_method=put" >
 	<% include _form.ejs %>
 </form>
+
+<script>
+	function correctTheme() {
+		if (!document.getElementById("ErrorMsgs")) {
+			document.getElementById("tema").value = "<%= quiz.tema %>";
+		}
+	}	
+
+	correctTheme();
+</script>
