--- a/public/stylesheets/wide.css
+++ b/public/stylesheets/wide.css
@@ -1,23 +1,23 @@
-body {
+-body {
 	background: #999;
 }
-#page-wrap:after {
+-#page-wrap:after {
 	content: "Wide Layout. Página en construcción. Gracias por su paciencia.";
 }
-nav {
+-nav {
 	float: left;
 	width: 15%;
 	height: 500px;
 }
-nav span {
+-nav span {
 	margin: 0px 100px 0px 0px;
 }
-section {
+-section {
 	float: right;
 	width: 80.3%;
 	height: 500px;
 }
-footer {
+-footer {
 	clear: both;
 	display: block;
 }
