--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,7 @@
-<h3>¡Bienvenido/a a <%= title %>!</h3>
+<h2>¡Bienvenido/a a <%= title %>!</h2>
 <p>¡El portal en el que podrás demostrar tus conocimientos!</p>
 <p>Pon a prueba a tus amigos creando tus propias preguntas</p>
-<p><a href="/quizes">¡Comenzar!</a></p>
+<div id="startBack">
+	<div></div>
+	<a href="/quizes" id="start">¡Comenzar!</a>
+</div>
