--- a/views/quizes/edit.ejs
+++ b/views/quizes/edit.ejs
@@ -1,4 +1,4 @@
-Edite la pregunta <p>
+<h2>Modifica la pregunta</h2>
 <form method="post" action="/quizes/<%= quiz.id %>?_method=put" >
 	<% include _form.ejs %>
 </form>
